k8s/clusters/cluster-0/manifests/selfhosted/boobereats/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app: boobereats
  name: boobereats
  namespace: selfhosted
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    k8s-app: boobereats
